[package]
name = "raytracer"
version = "0.1.0"
authors = ["Mzi <mzi1228@sjtu.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
indicatif = "0.15"
imageproc = "0.21"
rusttype = "0.9"
rand = "0.7.0"
threadpool = "1.8"